--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
+    "eagle.js": "^0.6.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
